--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             font-family: 'Disney', sans-serif;
             color: #fff;
             overflow-x: hidden;
+            height: 100%;
         }
 
         .background-video {
@@ -26,6 +27,7 @@
             height: 100%;
             object-fit: cover;
             z-index: -1;
+            filter: brightness(70%);
         }
 
         .overlay {
@@ -35,20 +37,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: rgba(0, 0, 0, 0.5);
-        }
-
-        .brightness-control {
-            position: fixed;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 2;
-        }
-
-        .content {
-            padding: 20px;
             text-align: center;
+            padding: 20px;
         }
 
         .circle-image {
@@ -57,21 +47,25 @@
             width: 150px;
             height: 150px;
             object-fit: cover;
+            margin-bottom: 20px;
         }
 
         .second-view {
             margin-top: 50px;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 20px;
+            text-align: center;
         }
 
         .icon {
-            display: flex;
-            align-items: center;
-            margin: 10px 0;
+            margin: 20px 0;
         }
 
         .icon img {
-            width: 24px;
-            margin-right: 10px;
+            display: block;
+            margin: 0 auto;
+            width: 40px;
         }
 
         .button {
@@ -84,6 +78,7 @@
             cursor: pointer;
             text-decoration: none;
             color: #333;
+            display: inline-block;
         }
     </style>
 </head>
@@ -94,46 +89,30 @@
         Tu navegador no soporta la reproducción de video.
     </video>
 
-    <!-- Control de brillo -->
-    <input type="range" min="50" max="150" value="100" class="brightness-control" id="brightnessRange">
-
     <!-- Primera vista -->
     <div class="overlay">
-        <div class="content">
-            <h1>Cumpleaños N° 2 de Pablito</h1>
-            <img src="https://res.cloudinary.com/your-cloudinary-id/image/upload/imagenname.jpg" alt="Pablito" class="circle-image">
-            <p>Ven a compartir con nosotros un momento especial para agradecer por un año más de vida de nuestro hermoso hijo Pablo, un regalo de Dios para comprender el poder del amor familiar.</p>
-        </div>
-
-        <!-- Segunda vista -->
-        <div class="second-view">
-            <div class="icon">
-                <img src="https://path/to/calendar-icon.png" alt="Calendario">
-                <p>Sábado 16 de Noviembre</p>
-            </div>
-            <div class="icon">
-                <img src="https://path/to/clock-icon.png" alt="Reloj">
-                <p>5:00 PM</p>
-            </div>
-            <!-- Embed de horario (ajusta el iframe según el servicio) -->
-            <iframe src="https://example.com/embed-horario" width="100%" height="100" frameborder="0"></iframe>
-            <div class="icon">
-                <img src="https://path/to/location-icon.png" alt="Ubicación">
-                <p>Carrera 8 N° 27 – 26<br>Barrio Santander</p>
-            </div>
-            <a href="https://wa.me/57XXXXXXXXX?text=Confirmo%20asistencia%20al%20cumpleaños%20de%20Pablito" class="button">Confirmar asistencia</a>
-        </div>
+        <h1>Cumpleaños N° 2 de Pablito</h1>
+        <img src="https://res.cloudinary.com/your-cloudinary-id/image/upload/imagenname.jpg" alt="Pablito" class="circle-image">
+        <p>Ven a compartir con nosotros un momento especial para agradecer por un año más de vida de nuestro hermoso hijo Pablo, un regalo de Dios para comprender el poder del amor familiar.</p>
     </div>
 
-    <script>
-        // Ajustar el brillo del video
-        const brightnessRange = document.getElementById('brightnessRange');
-        const video = document.querySelector('.background-video');
-
-        brightnessRange.addEventListener('input', () => {
-            const value = brightnessRange.value;
-            video.style.filter = `brightness(${value}%)`;
-        });
-    </script>
+    <!-- Segunda vista (visible al deslizar hacia abajo) -->
+    <div class="second-view">
+        <div class="icon">
+            <img src="https://path/to/calendar-icon.png" alt="Calendario">
+            <p>Sábado 16 de Noviembre</p>
+        </div>
+        <div class="icon">
+            <img src="https://path/to/clock-icon.png" alt="Reloj">
+            <p>5:00 PM</p>
+        </div>
+        <!-- Embed de horario (ajusta el iframe según el servicio) -->
+        <iframe src="https://example.com/embed-horario" width="100%" height="100" frameborder="0"></iframe>
+        <div class="icon">
+            <img src="https://path/to/location-icon.png" alt="Ubicación">
+            <p>Carrera 8 N° 27 – 26<br>Barrio Santander</p>
+        </div>
+        <a href="https://wa.me/57XXXXXXXXX?text=Confirmo%20asistencia%20al%20cumpleaños%20de%20Pablito" class="button">Confirmar asistencia</a>
+    </div>
 </body>
 </html>
