--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cumpleaños de Pablito</title>
     <style>
-        @font-face {
-            font-family: 'Disney';
-            src: url('https://path/to/your/disney-font.ttf'); /* Reemplaza con la ruta de tu fuente */
-        }
-
         body, html {
             margin: 0;
             padding: 0;
-            font-family: 'Disney', sans-serif;
-            color: #fff;
-            overflow-x: hidden;
             height: 100%;
+            overflow: hidden;
         }
 
         .background-video {
@@ -25,9 +18,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
             z-index: -1;
-            filter: brightness(70%);
+            border: none;
         }
 
         .overlay {
@@ -39,6 +31,8 @@
             height: 100vh;
             text-align: center;
             padding: 20px;
+            color: #fff;
+            font-family: 'Disney', sans-serif;
         }
 
         .circle-image {
@@ -83,11 +77,13 @@
     </style>
 </head>
 <body>
-    <!-- Video de fondo -->
-    <video class="background-video" autoplay loop muted>
-        <source src="https://res.cloudinary.com/your-cloudinary-id/video/upload/videoname.mp4" type="video/mp4">
-        Tu navegador no soporta la reproducción de video.
-    </video>
+    <!-- Video de fondo de YouTube -->
+    <iframe class="background-video"
+        src="https://www.youtube.com/embed/oREoz3qZyfE?autoplay=1&loop=1&playlist=oREoz3qZyfE&mute=0&controls=0&showinfo=0&modestbranding=1"
+        allow="autoplay"
+        frameborder="0"
+        allowfullscreen>
+</iframe>
 
     <!-- Primera vista -->
     <div class="overlay">
@@ -106,7 +102,6 @@
             <img src="https://path/to/clock-icon.png" alt="Reloj">
             <p>5:00 PM</p>
         </div>
-        <!-- Embed de horario (ajusta el iframe según el servicio) -->
         <iframe src="https://example.com/embed-horario" width="100%" height="100" frameborder="0"></iframe>
         <div class="icon">
             <img src="https://path/to/location-icon.png" alt="Ubicación">
