--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             left: 0;
             width: 100%;
             height: 100%;
+            object-fit: cover;
             z-index: -1;
             border: none;
         }
@@ -32,7 +33,7 @@
             text-align: center;
             padding: 20px;
             color: #fff;
-            font-family: 'Disney', sans-serif;
+            font-family: 'Disney', sans-serif; /* Puedes cambiar la fuente si es necesario */
         }
 
         .circle-image {
@@ -77,18 +78,16 @@
     </style>
 </head>
 <body>
-    <!-- Video de fondo de YouTube -->
-    <iframe class="background-video"
-        src="https://www.youtube.com/embed/oREoz3qZyfE?autoplay=1&loop=1&playlist=oREoz3qZyfE&mute=0&controls=0&showinfo=0&modestbranding=1"
-        allow="autoplay"
-        frameborder="0"
-        allowfullscreen>
-</iframe>
+    <!-- Video de fondo de Cloudinary -->
+    <video class="background-video" autoplay loop playsinline>
+        <source src="https://res.cloudinary.com/dqllxpyis/video/upload/v1731445165/Mickey_Mouse_Cantando_Feliz_Cumplea%C3%B1os_uz0efd.mp4" type="video/mp4">
+        Tu navegador no soporta la reproducción de video.
+    </video>
 
     <!-- Primera vista -->
     <div class="overlay">
         <h1>Cumpleaños N° 2 de Pablito</h1>
-        <img src="https://res.cloudinary.com/your-cloudinary-id/image/upload/imagenname.jpg" alt="Pablito" class="circle-image">
+        <img src="https://res.cloudinary.com/your-cloud-name/image/upload/v12345678/your-image.jpg" alt="Pablito" class="circle-image">
         <p>Ven a compartir con nosotros un momento especial para agradecer por un año más de vida de nuestro hermoso hijo Pablo, un regalo de Dios para comprender el poder del amor familiar.</p>
     </div>
 
